--- a/CV/en/experience/index.html
+++ b/CV/en/experience/index.html
@@ -21,23 +21,23 @@
 
                 <!-- Тут і далі всі елементи списку розташовані ліворуч один від одного -->
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/" target="_self">Main page</a>
+                    <a href="/CV/en/" target="_self">Main page</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/Introduction/" target="_self">Introduction</a>
+                    <a href="/CV/en/Introduction/" target="_self">Introduction</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/experience/" target="_self">Experience</a>
+                    <a href="/CV/en/experience/" target="_self">Experience</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/skills/" target="_self">Skills</a>
+                    <a href="/CV/en/skills/" target="_self">Skills</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/uk/experience/" target="_self">Language change (UK)</a>
+                    <a href="/CV/uk/experience/" target="_self">Language change (UK)</a>
                 </li>
             </ul>
         </div>
