--- a/CV/en/index.html
+++ b/CV/en/index.html
@@ -21,29 +21,29 @@
                 
                 <!-- Тут і далі всі елементи списку розташовані ліворуч один від одного -->
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/" target="_self">Main page</a>
+                    <a href="/CV/en/" target="_self">Main page</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/Introduction/" target="_self">Introduction</a>
+                    <a href="/CV/en/Introduction/" target="_self">Introduction</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/experience/" target="_self">Experience</a>
+                    <a href="/CV/en/experience/" target="_self">Experience</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/en/skills/" target="_self">Skills</a>
+                    <a href="/CV/en/skills/" target="_self">Skills</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/" target="_self">Language change (UK)</a>
+                    <a href="/CV/" target="_self">Language change (UK)</a>
                 </li>
             </ul>
         </div>
 
         <div style="display: flex; flex-direction: row; margin-top: 50px;">
-            <img src="/img/photo.jpg" alt="CV-photo_Kostiantyn_Sukhykh" width="320" height="480">
+            <img src="../img/photo.jpg" alt="CV-photo_Kostiantyn_Sukhykh" width="320" height="480">
         
             <div
                 style="display: flex; flex-direction: column; align-items: center; margin-left: 16px; justify-content: space-between;">
