--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <h1>Homework`s links:</h1>
 
-            <a href="/CV/">Homework_01 (CV)</a>
+            <a href="CV/">Homework_01 (CV)</a>
         </main>
        
     </body>
