--- a/CV/uk/skills/index.html
+++ b/CV/uk/skills/index.html
@@ -21,23 +21,23 @@
 
                 <!-- Тут і далі всі елементи списку розташовані ліворуч один від одного -->
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/CV/" target="_self">Головна сторінка</a>
+                    <a href="../CV/" target="_self">Головна сторінка</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/CV/uk/Introduction/" target="_self">Вступне слово</a>
+                    <a href="../CV/uk/Introduction/" target="_self">Вступне слово</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/CV/uk/experience/" target="_self">Досвід роботи</a>
+                    <a href="../CV/uk/experience/" target="_self">Досвід роботи</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/CV/uk/skills/" target="_self">Навички</a>
+                    <a href="../CV/uk/skills/" target="_self">Навички</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="/CV/en/skills/" target="_self">Змінити мову (EN)</a>
+                    <a href="../CV/en/skills/" target="_self">Змінити мову (EN)</a>
                 </li>
             </ul>
         </div>
