--- a/CV/uk/Introduction/index.html
+++ b/CV/uk/Introduction/index.html
@@ -25,7 +25,7 @@
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="../CV/uk/Introduction/" target="_self">Вступне слово</a>
+                    <a href="../Introduction/" target="_self">Вступне слово</a>
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
