--- a/CV/en/experience/index.html
+++ b/CV/en/experience/index.html
@@ -37,7 +37,7 @@
                 </li>
 
                 <li style="float: left; padding: 8px 16px;">
-                    <a href="../experience/" target="_self">Language change (UK)</a>
+                    <a href="../../uk/experience/" target="_self">Language change (UK)</a>
                 </li>
             </ul>
         </div>
