--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h1>Homework`s links:</h1>
 
             <a href="CV/" target="_blank">Homework_01 (CV)</a>
+            <a href="IT/" target="_blank">Homework_02 (IT)</a>
         </main>
        
     </body>
