--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </header>
 
         <main>
+
+            <div style="display: flex; flex-direction:column;">
+
+
+
+            </div>
             <h1>Homework`s links:</h1>
 
             <a href="CV/" target="_blank">Homework_01 (CV)</a>
