--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <li>
                     <a href="IT/" target="_blank">Homework_02 (IT)</a>
                 </li>
+
+                <li>
+                    <a href="FORMS/" target="_blank">Homework_03 (FORMS)</a>
+                </li>
             </ul>
 
         </main>
