valid code added

--- a/FORMS/index.html
+++ b/FORMS/index.html
@@ -20,7 +20,7 @@
             <div class="header">
                 <div class="BA_container">
                     <a href="https://beetroot.academy/" target="_blank">
-                        <img src="./img/1200px-Beetroot_Logo_140x50px.svg.png" alt="Beetroot_logo" width="100px" height="100%">
+                        <img src="./img/1200px-Beetroot_Logo_140x50px.svg.png" alt="Beetroot_logo" width="100">
                     </a>
                 </div>
                 
@@ -29,7 +29,7 @@
                 </div>
                 
                 <div class="SKI_container">
-                    <a style="text-decoration: none; color: #1C1C1C;" href="../CV/index.html" target="_blank;">Kostiantyn Sukhykh</a>
+                    <a style="text-decoration: none; color: #1C1C1C;" href="../CV/index.html" target="blank;">Kostiantyn Sukhykh</a>
                 </div>
 
                 <div style="align-self: center; color: white; margin-right: 40px;">
@@ -55,17 +55,17 @@
                     <h2 style="margin: 35px 0px 0px 35px;" id="form_1">Create an Account</h2>
                     <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px 35px;">
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="First Name 1">First Name</label>
-                            <input type="text" minlength="3" name="First Name" id="First Name 1" value="First Name" placeholder="Input your First Name here" required>
+                            <label class="label" for="FirstName1">First Name</label>
+                            <input type="text" minlength="3" name="First Name" id="FirstName1" value="First Name" placeholder="Input your First Name here" required>
                         </div>
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="Last Name 1">Last Name</label>
-                            <input type="text" minlength="3" name="Last Name" id="Last Name 1" value="Last Name" placeholder="Input your Last Name here" required>
+                            <label class="label" for="LastName1">Last Name</label>
+                            <input type="text" minlength="3" name="Last Name" id="LastName1" value="Last Name" placeholder="Input your Last Name here" required>
                         </div>                    
                     </div>
                     <div style="display: flex; flex-direction: column; height: 92px; width: 500px; margin: 0px 35px;">
-                        <label class="label" for="E-mail 1">E-mail</label>
-                        <input type="email" minlength="3" name="E-mail" id="E-mail 1" value="test@test.com" placeholder="Input your E-mail here" required autofocus>
+                        <label class="label" for="E-mail1">E-mail</label>
+                        <input type="email" minlength="3" name="E-mail" id="E-mail1" value="test@test.com" placeholder="Input your E-mail here" required autofocus>
                         <p class="paragraf">
                             We'll never share your email with anyone else.
                         </p>
@@ -82,8 +82,8 @@
                     </div>
                     <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px 35px;">
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="Country 1">Country</label>
-                            <select name="Country" id="Country 1" value="Ukraine">
+                            <label class="label" for="Country1">Country</label>
+                            <select name="Country" id="Country1">
                                 <optgroup label="Europe">
                                     <option value="Poland">Poland</option>
                                     <option value="Ukraine" selected>Ukraine</option>
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div style="align-self: center; margin-top: 20px;">
-                    <div style="width: 177; display: flex; flex-direction: row;">
+                    <div style="width: 177px; display: flex; flex-direction: row;">
                         <p class="paragraf">Have an account?</p>
                         <p style="margin-left: 20px;" class="paragraf"><span><a href="login.html" target="_blank">Log In</a></span></p>
                     </div>
@@ -122,10 +122,10 @@
             </div>
 
             <div class="form">
-                <form action="#" method="PUT" autocomplete="off" target="_blank">
+                <form action="#" method="get" autocomplete="off" target="_blank">
                     <h2 style="margin: 35px 0px 0px 35px;" id="form_2">Profile</h2>
                     <div style="display: flex; flex-direction: row; margin: 20px 35px 0px 35px;">
-                        <img src="./img/icons8-futurama-bender-240.png" alt="photo" width="80px" height="80px" class="border">
+                        <img src="./img/icons8-futurama-bender-240.png" alt="photo" width="80" height="80" class="border">
                         <div style="display: flex; flex-direction: column; justify-content: center; margin: 0px 20px;">
                             <input type="file" name="photo" accept="image/*" id="Photo" style="border: 1px solid #1C1C1C; border-radius: 2px;">
                             <label class="paragraf" for="Photo">Up to 1 MB (300x300 px)</label>
@@ -136,7 +136,7 @@
                     </div>
                 </form>   
 
-                <form action="#" method="PUT" autocomplete="off" target="_blank">
+                <form action="#" method="get" autocomplete="off" target="_blank">
                     <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px 35px;">
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
                             <label class="label" for="Name">Name</label>
@@ -144,15 +144,15 @@
                                 placeholder="Input your Name here" required>
                         </div>
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="E-mail 2">E-mail</label>
-                            <input type="email" minlength="3" name="E-mail" id="E-mail 2" value="test@test.com" placeholder="Input your E-mail here"
+                            <label class="label" for="E-mail2">E-mail</label>
+                            <input type="email" minlength="3" name="E-mail" id="E-mail2" value="test@test.com" placeholder="Input your E-mail here"
                                 required>
                         </div>
                     </div>
                     <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px 35px;">
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="Country 2">Country</label>
-                            <select name="Country" id="Country 2" value="Ukraine">
+                            <label class="label" for="Country2">Country</label>
+                            <select name="Country" id="Country2">
                                 <optgroup label="Europe">
                                     <option value="Poland">Poland</option>
                                     <option value="Ukraine" selected>Ukraine</option>
@@ -165,18 +165,18 @@
                             </select>
                         </div>
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="City 2">City</label>
-                            <input type="text" minlength="3" name="City" id="City 2" value="Kyiv" placeholder="Input your City here">
+                            <label class="label" for="City2">City</label>
+                            <input type="text" minlength="3" name="City" id="City2" value="Kyiv" placeholder="Input your City here">
                         </div>
                     </div>
                     <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px 35px;">
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="Zip Code">Zip Code</label>
-                            <input type="password" minlength="3" name="pass" id="Zip Code" value="123456789" placeholder="Input your Zip Code here" required>
+                            <label class="label" for="ZipCode">Zip Code</label>
+                            <input type="password" minlength="3" name="pass" id="ZipCode" value="123456789" placeholder="Input your Zip Code here" required>
                         </div>
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
-                            <label class="label" for="Phone Number">Phone Number</label>
-                            <input type="tel" minlength="3" name="Phone Number" id="Phone Number" value="380123456789"
+                            <label class="label" for="PhoneNumber">Phone Number</label>
+                            <input type="tel" minlength="3" name="Phone Number" id="PhoneNumber" value="380123456789"
                                 placeholder="Input your Phone Number here" required>
                         </div>
                     </div>
