--- a/FORMS/index.html
+++ b/FORMS/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div style="align-self: center; color: white; margin-right: 40px;">
-                    REPRESENT:
+                    PRESENT:
                 </div>
             </div>
 
