--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <li>
                     <a href="FORMS/" target="_blank">Homework_03 (FORMS)</a>
                 </li>
+
+                <li>
+                    <a href="Denis_Novik/" target="_blank">Homework_04 (Denis Novik Landing Page)</a>
+                </li>
             </ul>
 
         </main>
