zip code fixwed

--- a/FORMS/index.html
+++ b/FORMS/index.html
@@ -172,7 +172,7 @@
                     <div style="display: flex; flex-direction: row; justify-content: space-between; margin: 20px 35px;">
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
                             <label class="label" for="ZipCode">Zip Code</label>
-                            <input type="password" minlength="3" name="pass" id="ZipCode" value="123456789" placeholder="Input your Zip Code here" required>
+                            <input type="text" minlength="3" name="ZipCode" id="ZipCode" value="123456" placeholder="Input your Zip Code here" required>
                         </div>
                         <div style="display: flex; flex-direction: column; height: 67px; width: 245px;">
                             <label class="label" for="PhoneNumber">Phone Number</label>
