--- a/index.html
+++ b/index.html
@@ -27,19 +27,23 @@
 
             <ul>
                 <li>
-                    <a href="CV/" target="_blank">Homework_01 (CV)</a>
+                    <a style="text-decoration: none; color: black;" href="CV/" target="_blank">Homework_01 (CV)</a>
                 </li>
 
                 <li>
-                    <a href="IT/" target="_blank">Homework_02 (IT)</a>
+                    <a style="text-decoration: none; color: black;" href="IT/" target="_blank">Homework_02 (IT)</a>
                 </li>
 
                 <li>
-                    <a href="FORMS/" target="_blank">Homework_03 (FORMS)</a>
+                    <a style="text-decoration: none; color: black;" href="FORMS/" target="_blank">Homework_03 (FORMS)</a>
                 </li>
 
                 <li>
-                    <a href="Denis_Novik/" target="_blank">Homework_04 (Denis Novik Landing Page)</a>
+                    <a style="text-decoration: none; color: black;" href="Denis_Novik/" target="_blank">Homework_04 (Denis Novik Landing Page)</a>
+                </li>
+
+                <li>
+                    <a style="text-decoration: none; color: black;" href="DN_NewDesign/" target="_blank">Homework_05 (Denis Novik New Design)</a>
                 </li>
             </ul>
 
