--- a/DN_NewDesign/index.html
+++ b/DN_NewDesign/index.html
@@ -56,11 +56,11 @@
 
                     <div class="skills_bar">
                         <div class="skill">
-                            <figure class="skill_img">
+                            <div class="skill_img">
                                 <img class="skill_img_mb_25" src="assets/img/Ps.png" alt="PS_logo">
-                                <figcaption class="skill_header">Adobe</figcaption>
-                                <figcaption class="skill_header">Photoshop</figcaption>
-                            </figure>
+                                <p class="skill_header">Adobe</p>
+                                <p class="skill_header">Photoshop</p>
+                            </div>
                             <div>
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
@@ -70,11 +70,11 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <figure class="skill_img">
+                            <div class="skill_img">
                                 <img class="skill_img_mb_25" src="assets/img/Ai.png" alt="AI_logo">
-                                <figcaption class="skill_header">Adobe</figcaption>
-                                <figcaption class="skill_header">Illustrator</figcaption>
-                            </figure>
+                                <p class="skill_header">Adobe</p>
+                                <p class="skill_header">Illustrator</p>
+                            </div>
                             <div>
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
@@ -84,12 +84,11 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <figure class="skill_img">
+                            <div class="skill_img">
                                 <img class="skill_img_mb_25" src="assets/img/Ae.png" alt="AE_logo">
-                                <figcaption class="skill_header">Adobe</figcaption>
-                                <figcaption class="skill_header">After Effects</figcaption>
-                            </figure>
-                            
+                                <p class="skill_header">Adobe</p>
+                                <p class="skill_header">After Effects</p>
+                            </div>
                             <div>
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
@@ -99,10 +98,10 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <figure class="skill_img">
+                            <div class="skill_img">
                                 <img class="skill_img_mb_25" src="assets/img/Figma.png" alt="Figma_logo">
-                                <figcaption class="skill_header">Figma</figcaption>
-                            </figure>
+                                <p class="skill_header">Figma</p>
+                            </div>
                             <div>
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
                                 <img src="assets/img/star-icon-bl.png" alt="star_black">
