--- a/DN_NewDesign/index.html
+++ b/DN_NewDesign/index.html
@@ -7,8 +7,8 @@
         
         <title>DN_Landing page (new design)</title>
 
+        <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/reset.css">
-        <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
         <link rel="stylesheet" href="assets/css/style.css">
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
