--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 <li>
                     <a style="text-decoration: none; color: black;" href="DN_NewDesign/" target="_blank">Homework_05 (Denis Novik New Design)</a>
                 </li>
+
+                <li>
+                    <a style="text-decoration: none; color: black;" href="Shopping_List/" target="_blank">Homework_06 (Shopping List)</a>
+                </li>
             </ul>
 
         </main>
