--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                 <li>
                     <a style="text-decoration: none; color: black;" href="Shopping_List/" target="_blank">Homework_06 (Shopping List)</a>
                 </li>
+
+                <li>
+                    <a style="text-decoration: none; color: black;" href="Productly_landing/" target="_blank">Homework_07 (Productly_landing)</a>
+                </li>
+
+                <li>
+                    <a style="text-decoration: none; color: black;" href="Weather_Forecast/" target="_blank">Homework_07-1 (Weather Forecast)</a>
+                </li>
             </ul>
 
         </main>
