--- a/Productly_landing/index.html
+++ b/Productly_landing/index.html
@@ -22,9 +22,8 @@
     <body>
         <header>
             <div class="container">
-                <div class="img__cover">
-                    <img src="assets/img/productly__logo.png" alt="productly__logo">
-                </div><nav>
+                <img src="assets/img/productly__logo.png" alt="productly__logo">
+                <nav>
                     <ul>
                         <li>
                             <a href="#" target="_blank">Product</a>
@@ -39,7 +38,8 @@
                             <a href="#" target="_blank">Resources</a>
                         </li>
                     </ul>
-                </nav><div>
+                </nav>
+                <div>
                     <button class="button__header" type="button">
                         Sign In
                     </button><button class="button__header" type="button">
@@ -62,9 +62,8 @@
                         <button class="button__site" type="button">
                             Get started
                         </button>
-                    </div><div class="img__cover">
-                        <img src="assets/img/first__screen__image.png" alt="First__screen__img">
                     </div>
+                    <img src="assets/img/first__screen__image.png" alt="First__screen__img">
                 </div>
             </section>
             <section>
