--- a/Weather_Forecast/index.html
+++ b/Weather_Forecast/index.html
@@ -5,14 +5,71 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>Document</title>
+        <link rel="icon" href="assets/img/weather_forecast_icon.png">
+        <title>Weather Forecast</title>
 
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
-    </head>
+        <link rel="stylesheet" href="assets/css/weather-icons.min.css">
+
     <body>
-        
+        <div class="container">
+            <div class="content">
+                <h1>CSS Weather Forecast</h1>
+                <span class="wi wi-sunrise"></span>
+                <div class="content__tabble">
+                    <ul>
+                        <li>
+                            <p>Lisbon</p>
+                            <p>21°C</p><span class="wi wi-day-sunny"></span>
+                        </li>
+                        <li>
+                            <p>Paris</p>
+                            <p>11°C</p><span class="wi wi-night-sleet"></span>
+                        </li>
+                        <li>
+                            <p>Belgrade</p>
+                            <p>15°C</p><span class="wi wi-day-cloudy"></span>
+                        </li>
+                        <li>
+                            <p>Venice</p>
+                            <p>21°C</p><span class="wi wi-day-cloudy-high"></span>
+                        </li>
+                        <li>
+                            <p>Tel-Avive</p>
+                            <p>32°C</p><span class="wi wi-hot"></span>
+                        </li>
+                        <li>
+                            <p>Cair</p>
+                            <p>21°C</p><span class="wi wi-day-sunny"></span>
+                        </li>
+                        <li>
+                            <p>New-York</p>
+                            <p>17°C</p><span class="wi wi-day-storm-showers"></span>
+                        </li>
+                        <li>
+                            <p>New-Delhi</p>
+                            <p>17°C</p><span class="wi wi-rain-wind"></span>
+                        </li>
+                        <li>
+                            <p>San-Francisco</p>
+                            <p>15°C</p><span class="wi wi-day-sunny-overcast"></span>
+                        </li>
+                        <li>
+                            <p>Tokyo</p>
+                            <p>8°C</p><span class="wi wi-night-clear"></span>
+                        </li>
+                        <li>
+                            <p>Sydney</p>
+                            <p>25°C</p><span class="wi wi-night-partly-cloudy"></span>
+                        </li>
+                    </ul>
+                </div>
+                <h2>Have a nice day and don't forget umbrella if you are in New Delhi now!</h2>
+            </div>
+        </div>
     </body>
+
 </html>
