--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                 <li>
                     <a style="text-decoration: none; color: black;" href="Weather_Forecast/" target="_blank">Homework_07-1 (Weather Forecast)</a>
                 </li>
+
+                <li>
+                    <a style="text-decoration: none; color: black;" href="Photography/" target="_blank">Homework_08 (Photography)</a>
+                </li>
             </ul>
 
         </main>
