section header added

--- a/Productly_landing/index.html
+++ b/Productly_landing/index.html
@@ -103,8 +103,8 @@
             </section>
             <section>
                 <div class="container">
-                    <div>
-
+                    <div class="section__content">
+                        <h2>Design Professionals</h2>
                     </div>
                     <div class="img__container">
                         <img src="assets/img/benefits__image.png" alt="benefits__image">
@@ -116,15 +116,15 @@
                     <div class="img__container">
                         <img src="assets/img/product__managers__image.png" alt="product__managers__image">
                     </div>
-                    <div>
-
+                    <div class="section__content">
+                        <h2>Product Managers</h2>
                     </div>
                 </div>
             </section>               
             <section>
                 <div class="container">
-                    <div>
-                
+                    <div class="section__content">
+                        <h2>Marketers</h2>
                     </div>
                     <div class="img__container">
                         <img src="assets/img/marketers__image.png" alt="marketers__image">
