--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                 </li>
 
                 <li>
-                    <a style="text-decoration: none; color: black;" href="Weather_Forecast/" target="_blank">Homework_07-1 (Weather Forecast)</a>
+                    <a style="text-decoration: none; color: black;" href="Weather_Forecast/" target="_blank">Homework_08 (Weather Forecast)</a>
                 </li>
 
                 <li>
-                    <a style="text-decoration: none; color: black;" href="Photography/" target="_blank">Homework_08 (Photography)</a>
+                    <a style="text-decoration: none; color: black;" href="Photography/" target="_blank">Homework_09 (Photography)</a>
                 </li>
             </ul>
 
