--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 <li>
                     <a style="text-decoration: none; color: black;" href="Photography/" target="_blank">Homework_09 (Photography)</a>
                 </li>
+
+                <li>
+                    <a style="text-decoration: none; color: black;" href="ITlife/" target="_blank">Homework_10 (ITlife)</a>
+                </li>
             </ul>
 
         </main>
