--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                         >Homework_11 (Web Fonts)</a
                     >
                 </li>
+                <li>
+                    <a
+                        style="text-decoration: none; color: black"
+                        href="Konstruct/"
+                        target="_blank"
+                        >Homework_12 (Konstruct)</a
+                    >
+                </li>
             </ul>
         </main>
     </body>
