--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                         >Homework_12 (Konstruct)</a
                     >
                 </li>
+                <li>
+                    <a
+                        style="text-decoration: none; color: black"
+                        href="Whos_using/"
+                        target="_blank"
+                        >Homework_13 (Who`s using)</a
+                    >
+                </li>
             </ul>
         </main>
     </body>
