--- a/Konstruct/index.html
+++ b/Konstruct/index.html
@@ -57,14 +57,6 @@
         </header>
 
         <main class="main">
-            <div class="main__background background">
-                <img
-                    class="background__img"
-                    src="assets/img/bg-picture.png"
-                    alt="background_img"
-                />
-            </div>
-
             <div class="main__container container">
                 <div class="main__block">
                     <nav class="main__side-nav">
@@ -99,6 +91,14 @@
                     </nav>
 
                     <div class="main-content">
+                        <div class="main-content__background background">
+                            <img
+                                class="background__img"
+                                src="assets/img/bg-picture.png"
+                                alt="background_img"
+                            />
+                        </div>
+
                         <section
                             class="main-content__block introduction"
                             id="introduction"
