--- a/Konstruct/index.html
+++ b/Konstruct/index.html
@@ -256,5 +256,10 @@
                 </div>
             </div>
         </main>
+        <footer class="footer">
+            <div class="container">
+                Далі не обов'язковий футер. Виключно для тесту бекграунда
+            </div>
+        </footer>
     </body>
 </html>
