--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <li>
                     <a
                         style="text-decoration: none; color: black"
-                        href="Web Fonts/"
+                        href="Web_Fonts/"
                         target="_blank"
                         >Homework_11 (Web Fonts)</a
                     >
