--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
                         >Homework_13 (Who`s using)</a
                     >
                 </li>
+                <li>
+                    <a
+                        style="text-decoration: none; color: black"
+                        href="Freehand/"
+                        target="_blank"
+                        >Homework_14 (Freehand)</a
+                    >
+                </li>
             </ul>
         </main>
     </body>
