--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
                         >Homework_14 (Freehand)</a
                     >
                 </li>
+                <li>
+                    <a
+                        style="text-decoration: none; color: black"
+                        href="SVG_creation/"
+                        target="_blank"
+                        >Homework_15 (SVG)</a
+                    >
+                </li>
             </ul>
         </main>
     </body>
