--- a/SVG_creation/index.html
+++ b/SVG_creation/index.html
@@ -28,7 +28,7 @@
                             alt=""
                         />
                     </div>
-                    <div class="flex-svg">
+                    <div class="flex-svg flip">
                         <svg class="svg">
                             <rect
                                 x="0"
@@ -132,7 +132,7 @@
                             alt=""
                         />
                     </div>
-                    <div class="flex-svg">
+                    <div class="flex-svg flip">
                         <svg class="svg">
                             <line
                                 x1="6"
@@ -218,7 +218,7 @@
                         />
                     </div>
                     <div class="flex-svg">
-                        <svg class="svg">
+                        <svg class="svg flip">
                             <circle
                                 cx="128"
                                 cy="128"
@@ -260,7 +260,7 @@
                         <img class="img" src="assets/img/sceptic.png" alt="" />
                     </div>
                     <div class="flex-svg">
-                        <svg class="svg">
+                        <svg class="svg flip">
                             <circle
                                 cx="128"
                                 cy="128"
@@ -300,7 +300,7 @@
                         />
                     </div>
                     <div class="flex-svg">
-                        <svg class="svg">
+                        <svg class="svg flip">
                             <rect
                                 x="28"
                                 y="0"
@@ -382,7 +382,7 @@
                         />
                     </div>
                     <div class="flex-svg">
-                        <svg class="svg">
+                        <svg class="svg flip">
                             <line
                                 x1="128"
                                 x2="128"
@@ -450,7 +450,7 @@
                         <img class="img" src="assets/img/youtube.png" alt="" />
                     </div>
                     <div class="flex-svg">
-                        <svg class="svg">
+                        <svg class="svg flip">
                             <rect
                                 x="0"
                                 y="35"
