--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
                         >Homework_16 (Cards)</a
                     >
                 </li>
+                <li>
+                    <a
+                        style="text-decoration: none; color: black"
+                        href="Our_team/"
+                        target="_blank"
+                        >Homework_17 (Out Team)</a
+                    >
+                </li>
             </ul>
         </main>
     </body>
