--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="uk">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>All my homework</title>
     </head>
 
     <body>
         <header>
-            <h3>This page contains links to all my homework.</h3>
+            <h3>This page contains links to all my homework</h3>
 
             <span>
                 <i>This ugly design will be changed. Sometime ...</i>
