--- a/index.html
+++ b/index.html
@@ -1,173 +1,181 @@
 <!DOCTYPE html>
 <html lang="uk">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>All my homework</title>
-    </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>All my homework</title>
+	</head>
 
-    <body>
-        <header>
-            <h3>This page contains links to all my homework</h3>
+	<body>
+		<header>
+			<h3>This page contains links to all my homework</h3>
 
-            <span>
-                <i>This ugly design will be changed. Sometime ...</i>
-            </span>
+			<span>
+				<i>This ugly design will be changed. Sometime ...</i>
+			</span>
 
-            <hr />
-        </header>
+			<hr />
+		</header>
 
-        <main>
-            <h1>Homework`s links:</h1>
+		<main>
+			<h1>Homework`s links:</h1>
 
-            <ul>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="CV/"
-                        target="_blank"
-                        >Homework_01 (CV)</a
-                    >
-                </li>
+			<ul>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="CV/"
+						target="_blank"
+						>Homework_01 (CV)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="IT/"
-                        target="_blank"
-                        >Homework_02 (IT)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="IT/"
+						target="_blank"
+						>Homework_02 (IT)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="FORMS/"
-                        target="_blank"
-                        >Homework_03 (FORMS)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="FORMS/"
+						target="_blank"
+						>Homework_03 (FORMS)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Denis_Novik/"
-                        target="_blank"
-                        >Homework_04 (Denis Novik Landing Page)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Denis_Novik/"
+						target="_blank"
+						>Homework_04 (Denis Novik Landing Page)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="DN_NewDesign/"
-                        target="_blank"
-                        >Homework_05 (Denis Novik New Design)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="DN_NewDesign/"
+						target="_blank"
+						>Homework_05 (Denis Novik New Design)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Shopping_List/"
-                        target="_blank"
-                        >Homework_06 (Shopping List)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Shopping_List/"
+						target="_blank"
+						>Homework_06 (Shopping List)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Productly_landing/"
-                        target="_blank"
-                        >Homework_07 (Productly_landing)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Productly_landing/"
+						target="_blank"
+						>Homework_07 (Productly_landing)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Weather_Forecast/"
-                        target="_blank"
-                        >Homework_08 (Weather Forecast)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Weather_Forecast/"
+						target="_blank"
+						>Homework_08 (Weather Forecast)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Photography/"
-                        target="_blank"
-                        >Homework_09 (Photography)</a
-                    >
-                </li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Photography/"
+						target="_blank"
+						>Homework_09 (Photography)</a
+					>
+				</li>
 
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="ITlife/"
-                        target="_blank"
-                        >Homework_10 (ITlife)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Web_Fonts/"
-                        target="_blank"
-                        >Homework_11 (Web Fonts)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Konstruct/"
-                        target="_blank"
-                        >Homework_12 (Konstruct)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Whos_using/"
-                        target="_blank"
-                        >Homework_13 (Who`s using)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Freehand/"
-                        target="_blank"
-                        >Homework_14 (Freehand)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="SVG_creation/"
-                        target="_blank"
-                        >Homework_15 (SVG)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Card_Deck/"
-                        target="_blank"
-                        >Homework_16 (Cards)</a
-                    >
-                </li>
-                <li>
-                    <a
-                        style="text-decoration: none; color: black"
-                        href="Our_team/"
-                        target="_blank"
-                        >Homework_17 (Out Team)</a
-                    >
-                </li>
-            </ul>
-        </main>
-    </body>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="ITlife/"
+						target="_blank"
+						>Homework_10 (ITlife)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Web_Fonts/"
+						target="_blank"
+						>Homework_11 (Web Fonts)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Konstruct/"
+						target="_blank"
+						>Homework_12 (Konstruct)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Whos_using/"
+						target="_blank"
+						>Homework_13 (Who`s using)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Freehand/"
+						target="_blank"
+						>Homework_14 (Freehand)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="SVG_creation/"
+						target="_blank"
+						>Homework_15 (SVG)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Card_Deck/"
+						target="_blank"
+						>Homework_16 (Cards)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Our_team/"
+						target="_blank"
+						>Homework_17 (Out Team)</a
+					>
+				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="First_Manifest/"
+						target="_blank"
+						>Homework_18 (First_Manifest)</a
+					>
+				</li>
+			</ul>
+		</main>
+	</body>
 </html>
