--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
 						>Homework_18 (First_Manifest)</a
 					>
 				</li>
+				<li>
+					<a
+						style="text-decoration: none; color: black;"
+						href="Second_Manifest/"
+						target="_blank"
+						>Homework_19 (Second_Manifest)</a
+					>
+				</li>
 			</ul>
 		</main>
 	</body>
